--- a/index.html
+++ b/index.html
@@ -185,6 +185,6 @@
 
 <script src="js/game.js"></script>
 <script src="js/stat.js"></script>
-
+<script src="js/setup.js"></script>
 </body>
 </html>
