--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div class="overlay setup hidden">
   <form class="setup-wizard-form"
         method="post"
-        action="http://js.dump.academy/code-and-magic" 
+        action="https://js.dump.academy/code-and-magick" 
         enctype="multipart/form-data"
         autocomplete="off">
 
