Завершена разработка обработчиков событий для модального окна настройки персонажа

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
 
     <div class="setup-player">
-      <div class="setup-wizard-appearance">
+      <div class="setup-wizard-appearance" tabindex="0">
         <div class="setup-wizard-wrap">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62 86" class="setup-wizard">
             <g class="wizard">
@@ -120,7 +120,7 @@
         <input type="hidden" name="eyes-color" value="black">
       </div>
 
-      <div class="setup-fireball-wrap">
+      <div class="setup-fireball-wrap" tabindex="0">
         <div class="setup-fireball"></div>
         <input type="hidden" name="fireball-color" value="#ee4830">
       </div>
