--- a/index.html
+++ b/index.html
@@ -185,8 +185,15 @@
 </template>
 
 <script src="js/game.js"></script>
+
+
+<script src="js/setup.js"></script>
+<script src="js/util.js"></script>
+<script src="js/dialog.js"></script>
+
 <script src="js/stat.js"></script>
-<!--<script src="js/setup.js"></script>-->
+
 <script src="js/events.js"></script>
+
 </body>
 </html>
